--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -110,3 +110,16 @@
 ; unusual behavior. This will not be invoked for things like SIGSEGV, SIGFPE,
 ; etc. I tried, and it doesn't work.
 ; crash_recovery=false
+
+; Currently, extensions are only supported on operating systems that use libdl
+; (this excludes Windows.)
+[extensions]
+
+; This is the default path where trogdord extensions are stored. Relative paths
+; are based on the root directory where trogdord was installed.
+; path=lib/trogdord
+
+; Extensions to be loaded should be formatted as a JSON array of strings, and
+; each extension should be referenced by its full filename, including
+; extension. For example: ["ext1.so", 'ext2.so']
+; load=[]
