--- a/cmake/pkg_config.pc.in
+++ b/cmake/pkg_config.pc.in
@@ -8,12 +8,11 @@ exec_prefix="${prefix}"
 libdir="${prefix}/lib"
 includedir="${prefix}/include"
 
-# TODO: I can't really fill these in properly until I spin trogdor and trogdord
-# out into their own separate projects.
-# Name: @PROJECT_NAME@
-# Description: @CMAKE_PROJECT_DESCRIPTION@
-# Version: @PROJECT_VERSION@
-# URL: @CMAKE_PROJECT_HOMEPAGE_URL@
+# TODO: change these to their CMake variables like @PROJECT_NAME@, etc.
+Name: @PKGCONFIG_NAME@
+Description: @PKGCONFIG_DESCRIPTION@
+Version: @PKGCONFIG_VERSION@
+URL: @PKGCONFIG_URL@
 
 Cflags: -I"${includedir}"
 Libs: -L"${libdir}" -l@PKGCONFIG_TARGET@
