standalone and core: added uninstall target to standalone and added old cppcheck analysis targets to both

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -349,6 +349,27 @@ add_dependencies(test_core _trogdor_test)
 
 ###############################################################################
 
+# Run cppcheck (if available)
+find_program(CPPCHECK cppcheck)
+
+if (CPPCHECK)
+
+	add_custom_target(cppcheck
+		cppcheck -D GAME_XML_DEFAULT_PATH --enable=all ${PROJECT_SOURCE_DIR}/* > /dev/null
+	)
+
+else (CPPCHECK)
+
+	add_custom_target(cppcheck echo "cppcheck not installed or not found. Skipping.")
+
+endif (CPPCHECK)
+
+# Perform static analysis
+add_custom_target(analyze)
+add_dependencies(analyze cppcheck)
+
+###############################################################################
+
 # Uninstall target
 if(NOT TARGET uninstall)
     configure_file(
