--- a/src/standalone/CMakeLists.txt
+++ b/src/standalone/CMakeLists.txt
@@ -113,3 +113,37 @@ if (ENABLE_SERIALIZE_SQLITE)
 endif (ENABLE_SERIALIZE_SQLITE)
 
 install(TARGETS standalone DESTINATION bin COMPONENT standalone)
+
+###############################################################################
+
+# Uninstall target
+if(NOT TARGET uninstall)
+    configure_file(
+        "${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
+        "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
+        IMMEDIATE @ONLY)
+
+    add_custom_target(uninstall
+        COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
+endif()
+
+###############################################################################
+
+# Run cppcheck (if available)
+find_program(CPPCHECK cppcheck)
+
+if (CPPCHECK)
+
+	add_custom_target(cppcheck
+		cppcheck -D GAME_XML_DEFAULT_PATH --enable=all ${PROJECT_SOURCE_DIR}/* > /dev/null
+	)
+
+else (CPPCHECK)
+
+	add_custom_target(cppcheck echo "cppcheck not installed or not found. Skipping.")
+
+endif (CPPCHECK)
+
+# Perform static analysis
+add_custom_target(analyze)
+add_dependencies(analyze cppcheck)
