trogdord: updated documentation to refer to extensions and added sample extension that can be used as a template for writing others

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 src/core/build
 src/standalone/build
 src/trogdord/build
+src/trogdord/sample/extensions/hello/build
 Makefile
 CMakeCache.txt
 CMakeFiles
