trogdord: added sample extension

--- a/src/trogdord/sample/extensions/hello/CMakeLists.txt
+++ b/src/trogdord/sample/extensions/hello/CMakeLists.txt
@@ -13,6 +13,8 @@ pkg_search_module(TROGDORD REQUIRED trogdord)
 
 set (SOURCES
     hello.cpp
+    output.cpp
+    serial.cpp
     extension.cpp
 )
 
