--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -122,4 +122,7 @@
 ; Extensions to be loaded should be formatted as a JSON array of strings, and
 ; each extension should be referenced by its full filename, including
 ; extension. For example: ["ext1.so", 'ext2.so']
+;
+; You can find a buildable, loadable sample extension, which can serve as a
+; template for your own projects, in sample/extensions/hello.
 ; load=[]
