trogdord: added template for unit tests that must be written for ExtensionLoader class

--- a/src/trogdord/CMakeLists.txt
+++ b/src/trogdord/CMakeLists.txt
@@ -278,6 +278,7 @@ if (INIH_INCLUDEDIR)
 		test/dispatcher.cpp
 		test/gamewrapper.cpp
 		test/gamecontainer.cpp
+		test/extensionloader.cpp
 		test/io/output/driver.cpp
 		test/io/output/local.cpp
 		test/scopes/controller.cpp
