more actions fixes

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -58,8 +58,9 @@ jobs:
        sudo apt-get -y install libxml2 libxml2-dev liblua5.3 liblua5.3-dev
 
     - run: |
-       cmake -DCMAKE_BUILD_TYPE=Debug ./src/core
+       cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_BUILD_TYPE=Debug ./src/core
        make trogdor
+       make install
 
     - run: |
        rm -rf CMakeFiles && rm CMakeCache.txt
