--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -55,7 +55,7 @@ jobs:
     #    uses a compiled language
 
     - run: |
-       sudo apt-get -y install libxml2 libxml2-dev liblua5.3 liblua5.3-dev
+       sudo apt-get -y install libxml2 libxml2-dev liblua5.3 liblua5.3-dev libinih1 libinih-dev rapidjson-dev
 
     # I'm installing this because it's required for trogdord to compile
     - run: |
