core: moved C++-implemented Lua functions for test_core into a separate module

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -338,6 +338,7 @@ add_executable(test_core
 	test/mock/mockaction.cpp
 	test/mock/mocktrigger.cpp
 	test/mock/mocktimerjob.cpp
+	test/lua/luafuncs.cpp
 	test/lua/luastate.cpp
 )
 
