--- a/.github/workflows/actions/test_core/Dockerfile
+++ b/.github/workflows/actions/test_core/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:20.04
 
 ENV DEBIAN_FRONTEND="noninteractive" TZ="America/Los_Angeles"
-RUN apt-get update && apt-get -y install wget git g++ cmake libxml2 libxml2-dev liblua5.3 liblua5.3-dev
+RUN apt-get update && apt-get -y install wget git g++ cmake libxml2 libxml2-dev liblua5.1 liblua5.1-dev liblua5.2 liblua5.2-dev liblua5.3 liblua5.3-dev
 RUN cd /usr/include && wget https://raw.githubusercontent.com/onqtam/doctest/2.4.4/doctest/doctest.h
 
 COPY entrypoint.sh /entrypoint.sh
