trogdord: added ipv6 support and the ability to listen for connections only from certain ip addresses

--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -15,6 +15,11 @@
 ; option to remain on.)
 ; send_keepalive=true
 
+; Tells trogdord which ip addresses to listen for when accepting connections.
+; 0.0.0.0 tells trogdord to accept connections from anywhere via IPv4, while
+; :: accomplishes the same with IPv6.
+; listen=["0.0.0.0", "::"]
+
 [logging]
 
 ; Trogdord support 3 different logging methods: stdout (standard out), stderr
