installed additional modules in the php-fpm container

--- a/src/php7/docker/Dockerfile
+++ b/src/php7/docker/Dockerfile
@@ -27,7 +27,7 @@ FROM php:${PHP_VER}-fpm
 ARG INCLUDE_NPM
 
 RUN apt-get update
-RUN apt-get -y install g++ wget rapidjson-dev libasio-dev
+RUN apt-get -y install g++ wget rapidjson-dev libasio-dev libzip4 libzip-dev
 
 WORKDIR /usr/local/src
 RUN wget https://github.com/crankycyclops/trogdor-pp/archive/refs/tags/0.90.0.tar.gz
@@ -36,6 +36,7 @@ WORKDIR /usr/local/src/trogdor-pp-0.90.0/src/php7/trogdord
 
 RUN phpize && ./configure && make -j$(nproc) && make install
 RUN docker-php-ext-enable trogdord
+RUN docker-php-ext-install bcmath zip pdo pdo_mysql
 
 # Install composer
 WORKDIR /usr/bin
@@ -57,7 +58,7 @@ RUN if [ "true" = "$INCLUDE_NPM" ]; then \
 fi
 
 # Cleanup after building
-RUN apt-get remove -y g++ wget
+RUN apt-get remove -y g++ wget rapidjson-dev libasio-dev
 RUN apt-get autoremove -y
 RUN rm -rf /usr/local/src/trogdor-pp-0.90.0
 
