#80: added optional username and password authentication to redis connection

--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -61,6 +61,14 @@
 ; The port the redis instance is listening on.
 ; port=6379
 
+; If required, this should be uncommented and set to the username needed to
+; authenticate with Redis.
+; username=somebody
+
+; If required, this should be uncommented and set to the password needed to
+; authenticate with Redis.
+; password=mypassword
+
 ; The number of milliseconds we should wait when attempting to connect to Redis
 ; before timing out.
 ; connection_timeout=5000
