trogdord: now, the server only listens on 127.0.0.1 or ::1 by default

--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -17,8 +17,9 @@
 
 ; Tells trogdord which ip addresses to listen for when accepting connections.
 ; 0.0.0.0 tells trogdord to accept connections from anywhere via IPv4, while
-; :: accomplishes the same with IPv6.
-; listen=["0.0.0.0", "::"]
+; :: accomplishes the same with IPv6. By default, trogdord will only listen
+; on localhost (127.0.0.1 for IPv4 and ::1 for IPv6.)
+; listen=["127.0.0.1", "::1"]
 
 [logging]
 
